--- a/basic-exchange-rate/package.json
+++ b/basic-exchange-rate/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basic-project-1",
+  "name": "basic-exchange-rate",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -24,11 +24,5 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "vite": "^5.4.1"
-  },
-  "eslintConfig": {
-    "extends": "react-app",
-    "rules": {
-      "jsx-a11y/anchor-is-valid": "off"
-    }
   }
 }
